workshop04/fortune-network.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: denyall
  labels:
    name: denyall

spec:
  podSelector:
    matchLabels:
      name: fortunepod
  policyTypes:
  - Ingress
  ingress:
  - from: 
    - podSelector: 
        matchLabels: 
          app: myshell
